examples/test/testpolicy11672.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11672
  namespace: namespace161
spec:
  podSelector:
    matchLabels:
      key32: value41
      key25: value42
      key18: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value9
          key15: value42
          key14: value16
      podSelector:
        matchLabels:
          key22: value32
          key6: value12
